Stop statuses overlapping actions, tidy up markup

--- a/tutorweb/quiz/resources/quiz.css
+++ b/tutorweb/quiz/resources/quiz.css
@@ -350,11 +350,24 @@ h4.instructions_heading{
 }
 /* === Footer ============================================================== */
 
+#tw-grade {
+    float: left;
+    margin: 3px 0 10px 0;
+    font-weight: bold;	
+}
+@media screen and (max-width:480px) {
+    #tw-grade {
+        font-size: 12px;	
+        margin: 3px 0 5px;
+    }
+}
+
 #tw-timer {
     text-align: right;
     font-weight: bold;
     width: 40%;
     float:right;
+    margin: 3px 0 10px 0;
 }
 #tw-timer span {
     display: none;
@@ -369,6 +382,7 @@ h4.instructions_heading{
 	    font-size: 12px;
 	}
 }
+
 .status {
     font-size: 95%;
 }
@@ -385,54 +399,25 @@ body.quiz-start .status #tw-actions {
     margin-bottom: 3px
 }
 
-.status .grades {
-    white-space: nowrap;
-    margin-top: 3px;
+#tw-answers {
+    clear: both;
 }
-/* A container with you grade and the timer */
-#grade-container{
-	position: relative;
-	width: 100%;
-	overflow: auto;
-	padding-bottom: 10px;
-}
-#tw-grade{
-	width: 60%;
-	float: left;
-	font-weight: bold;	
-	
-}
-@media screen and (max-width:480px) {
-	#grade-container {
-	    padding-bottom:5px;
-	}
-	#tw-grade{
-		font-size: 12px;	
-	}
-	body.quiz-start .grade{
-		font-size: 12px;
-	}	
-}
-body.quiz-start span.grade{
-	padding-left: 10px;
-}
-
-.status #tw-previous-answers ol {
+#tw-answers ol.previous {
     margin: 0;
 }
-.status #tw-previous-answers li {
+#tw-answers ol.previous li {
     float: left;
     width: 3em;
     list-style-position: inside;
     padding-left: 2em;
     font-weight: bold;
 }
-.status #tw-previous-answers .correct * { color: green; }
-.status #tw-previous-answers .incorrect * { color: red; }
+#tw-answers ol.previous .correct * { color: green; }
+#tw-answers ol.previous .incorrect * { color: red; }
 
 /* Hide previous answers on small screens */
 @media screen and (max-width:480px) {
-	#tw-previous-answers {
+	#tw-answers ol.previous {
 	    display: none;
 	}	
 }
